--- a/index.html
+++ b/index.html
@@ -28,7 +28,33 @@
         <input id="annualSalary" type="number" placeholder="Annual Salary">
         <button id="submitButton">Submit</button>
     </section>
+
 <main>
+    <table>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>ID Number</th>
+            <th>Job Title</th>
+            <th>Annual Salary</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+    </table>
+    
     <ul id ="target">
 
     </ul>
